# otus_graph_editor

./: CMakeLists.txt  Controller.cpp  Controller.h  Model.cpp  Model.h  README.md  View.cpp  View.h  main.cpp
.github/workflows/: release.yml
